--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your website title goes here</title>
+    <title>My Personal Portfolio Website</title>
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
-    <!-- Add your content here: use semantic tags where possible -->
+    
 </body>
 </html>
