Adding home section

--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@
             </ul>
         </div>
     </nav>
+
+    <!-- home section start -->
+    <section class="home" id="home">
+        <div class="max-width">
+            <div class="home-content">
+                <div class="text-1">Hello, i am</div>
+                <div class="text-2">NYAKAMWE</div>
+                <div class="text-3">And i am a <span>Web App Developer...</span> </div>
+                <a href="#about">Read more</a>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
