Adding about section with its styles

--- a/index.html
+++ b/index.html
@@ -32,5 +32,22 @@
             </div>
         </div>
     </section>
+
+    <!-- about me section -->
+    <section class="about" id="about">
+        <div class="max-width">
+            <h2 class="title">About me</h2>
+            <div class="about-content">
+                <div class="column left">
+                    <img src="images/profile-1.jpg" alt="">
+                </div>  
+                <div class="column right">
+                    <div class="text">I'm NYAKAMWE Aimable and i am a <span> Web App Developer,</span></div>
+                    <p>Mobile App Developer, Web Design also including .NET App Development</p>
+                    <a href="">Download My CV</a>
+                </div>     
+            </div>
+        </div>
+    </section>
 </body>
 </html>
