Adding service section

--- a/index.html
+++ b/index.html
@@ -50,5 +50,45 @@
             </div>
         </div>
     </section>
+
+    <!-- service section start -->
+    <section class="service" id="service">
+        <div class="max-width">
+            <h2 class="title">Services</h2>
+            <div class="service-content">
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Web App Development</div>
+                        <p>We provide to you a web app that meets with your wishes</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-paint-brush"></i>
+                        <div class="text">Web Design</div>
+                        <p>We design website for your commercial business or organization.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">.NET App Development</div>
+                        <p>New tech for developers for developing apps.</p>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="box">
+                        <i class="fas fa-code"></i>
+                        <div class="text">Mobile App Development</div>
+                        <p>Cross-Platforms app development.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
