Adding skills section with its styles

--- a/index.html
+++ b/index.html
@@ -90,5 +90,92 @@
             </div>
         </div>
     </section>
+ 
+    <!-- skills section start -->
+    <section class="skills" id="skills">
+        <div class="max-width">
+            <h2 class="title">My Skills</h2>
+            <div class="skills-content">
+                <div class="column left">
+                    <div class="text">My creative skills & experiences.</div>
+                    <p>All skills is proved by Bachelor's degree in IT acquired from UR and also many projects i involved in such as: Library information management system,...</p>
+                    <a href="">Read More</a>
+                </div>
+                <div class="column right">
+                    <div class="bars">
+                        <div class="info">
+                            <span>HTML</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line html"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>CSS</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line css"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>JavaScript</span>
+                            <span>60%</span>
+                        </div>
+                        <div class="line javascript"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>Python</span>
+                            <span>50%</span>
+                        </div>
+                        <div class="line py"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>PHP</span>
+                            <span>80%</span>
+                        </div>
+                        <div class="line php"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>MYSQL</span>
+                            <span>90%</span>
+                        </div>
+                        <div class="line mysql"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>C#</span>
+                            <span>70%</span>
+                        </div>
+                        <div class="line cs"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>Django Framework</span>
+                            <span>55%</span>
+                        </div>
+                        <div class="line django"></div>
+                    </div>
+
+                    <div class="bars">
+                        <div class="info">
+                            <span>.NET</span>
+                            <span>67%</span>
+                        </div>
+                        <div class="line cshtml"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
