--- a/index.html
+++ b/index.html
@@ -239,5 +239,11 @@
             </div>
         </div>
     </section>
+
+    <!-- footer section start -->
+    <footer>
+        <span>Created by N.A<span>| 2021 &copy; All Rights reserved.</span> </span>
+    </footer>
+    
 </body>
 </html>
